--- a/MyProject/Web.config
+++ b/MyProject/Web.config
@@ -44,7 +44,7 @@
 	</system.codedom>
 
 	<connectionStrings>
-		<add name="DBCS" connectionString="Data Source=DELL;Initial Catalog=OPF;User Id=SA;Password=root;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DBCS" connectionString="workstation id=schoolprj.mssql.somee.com;packet size=4096;user id=NayZawOo_SQLLogin_1;pwd=fzdxl3zyle;data source=schoolprj.mssql.somee.com;persist security info=False;initial catalog=schoolprj;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 </configuration>
